==> therealdreg/okhi/stuff/oldusb/rp/okhi.c <==
#include <stdlib.h>
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include "rp2040.h"
#include "hal_gpio.h"
#include "globals.h"
#include "utils.h"
#include "uart.h"
#include "spi.h"
#include "pio_asm.h"
#define STATUS_TIMEOUT     500000 // us

static void core1_main(void)
{
  HAL_GPIO_TRIGGER_in();
  HAL_GPIO_TRIGGER_pullup();

  while (1)
  {
    capture_buffer();
  }
}
