==> therealdreg/okhi/firmware/newusb/rp/okhi.c <==
#include <stdio.h>
#include <string.h>
#include "pico/stdlib.h"
#include "pico/bootrom.h"
#include "pico/multicore.h"
#include "hardware/uart.h"
#include "hardware/irq.h"
#include "hardware/pll.h"
#include "hardware/clocks.h"
#include "hardware/structs/pll.h"
#include "hardware/structs/clocks.h"
#include "hardware/pio.h"
#include "hardware/spi.h"
#include "hardware/clocks.h"
#include "hardware/pio.h"
#include "hardware/flash.h"
#include "hardware/timer.h"
#include "hardware/watchdog.h"
#include "okhi.pio.h"
#include "../../../../last_firmv.h"
#define DEV_BUILD 1
#define GPIO_A 4
#define GPIO_B 5
#define BP()   __asm("bkpt #1"); // breakpoint via software macro
#define DP_INDEX       20
#define DM_INDEX       21
#define START_INDEX    22
#define TRIGGER_INDEX  18
#define FLASH_PAGE_SIZE 256
#define FLASH_SECTOR_SIZE 4096
#define FLASH_TOTAL_SIZE (16 * 1024 * 1024)
#define DATA_BITS 8
#define STOP_BITS 1
#define PARITY UART_PARITY_NONE
#define SPI_BAUD 5000000 // ~4.6 mhz
#define SPI_ID spi1
#define SPI_SCK_PIN 10
#define SPI_MOSI_PIN 11
#define SPI_MISO_PIN 12
#define SPI_CS_PIN 13
#define EBOOT_MASTERDATAREADY_GPIO 14
#define ELOG_SLAVEREADY_GPIO  15
#define ESP_RESET_GPIO  28

void core1_main()
{
    sleep_ms(2000);
    gpio_init(ESP_RESET_GPIO);
    gpio_set_dir(ESP_RESET_GPIO, GPIO_IN);
    gpio_pull_up(ESP_RESET_GPIO);
    sleep_ms(2000);

    gpio_set_irq_enabled_with_callback(ESP_RESET_GPIO, GPIO_IRQ_EDGE_FALL, true, &gpio_callback);

    uart_init(uart0, 74880);
    gpio_set_function(16, GPIO_FUNC_UART);
    gpio_set_function(17, GPIO_FUNC_UART);
    // UART 8N1: 1 start bit, 8 data bits, no parity bit, 1 stop bit
    uart_set_hw_flow(uart0, false, false);
    uart_set_format(uart0, DATA_BITS, STOP_BITS, PARITY);
    uart_set_fifo_enabled(uart0, false);
    uart_set_irq_enables(uart0, false, false);

    gpio_init(ELOG_SLAVEREADY_GPIO);
    gpio_set_dir(ELOG_SLAVEREADY_GPIO, GPIO_IN);
    gpio_pull_up(ELOG_SLAVEREADY_GPIO);
    for (int i = 0; i < 3000; i++) 
    { 
        if (gpio_get(ELOG_SLAVEREADY_GPIO))
        {
            printf("ESP slave not ready yet... %d\r\n", i);
        }
        else
        {
            break;
        }
        tight_loop_contents();
    }
    gpio_init(EBOOT_MASTERDATAREADY_GPIO);
    gpio_set_dir(EBOOT_MASTERDATAREADY_GPIO, GPIO_OUT);
    gpio_put(EBOOT_MASTERDATAREADY_GPIO, false);

    unsigned int read_index = 0;
    unsigned int total_packets_sended = 0;
    unsigned int g = 0;
    unsigned int z = 90000000 + 1;
    unsigned int last_sended = 0;
    while (1) 
    {
        static unsigned char line[32] = {0};
        while (read_index != write_index) 
        {
            sprintf((char*)line, "%s   \r\n", &(ringbuff[read_index++ % (RING_BUFF_MAX_ENTRIES - 1)][32]));
            gpio_put(EBOOT_MASTERDATAREADY_GPIO, true);
            while (!gpio_get(ELOG_SLAVEREADY_GPIO)) 
            {
                tight_loop_contents();
            }
            gpio_put(EBOOT_MASTERDATAREADY_GPIO, false);
            my_spi_write_blocking(line, strlen((char*)line));
            printf("%s", (char*)line);
            total_packets_sended++;
        }
        if (last_sended != total_packets_sended && g++ > 20000000)
        {
            z = 0;
            g = 0;
            last_sended = total_packets_sended;
            sprintf((char*)line, "HWv%s packets sended: 0x%x", hwver_name, total_packets_sended);
            uart_write_blocking(uart0, line, strlen((char*)line) + 1);
            puts((char*)line);
        }
        else if (z++ > 90000000)
        {
            z = 0;
            g = 0;
            sprintf((char*)line, "HWv%s packets sended: 0x%x", hwver_name, total_packets_sended);
            uart_write_blocking(uart0, line, strlen((char*)line) + 1);
            puts((char*)line);
        }
    }
}
